# ffplayer

app/: build.gradle
app/src/androidTest/java/com/demo/ffplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ffplayer.cpp  jnilog.h  player.cpp  player.h  queue.cpp  queue.h
app/src/main/java/com/demo/ffplayer/: MainActivity.java
app/src/main/java/com/demo/ffplayer/player/: FFmpegPlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/demo/ffplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
